UI changes, fixed searchbar on mobile

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ body {
         max-width: 100%;
         margin: 0;
         border-radius: 0px;
-        padding: 40px 20px;
+        padding: 20px 20px;
         text-align: center;
         height: 100%;
         filter: none;
@@ -266,6 +266,11 @@ body {
     }
 .search input {
     min-width: 190px;
+    margin-right: 0;
+    height: 40px;
+}
+.search button {
+    display: none;
 }
 }
 @media only screen and (max-width: 320px) {
